--- a/strona1.1.html
+++ b/strona1.1.html
@@ -27,7 +27,7 @@
       }
 
       .stopka {
-        background-color: blue;
+        background-color: red;
         padding: 15px 200px 15px 200px;
         color: white;
         text-align: center;
